Fixed: closed modals triggered scrollbar on main page

--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -10,6 +10,7 @@
     rgba($color-black, 0.4),
     rgba($color-black, 0.1)
   );
+  overflow-y: auto;
   opacity: 0;
   z-index: 5;
   transition: visibility 0s ease-out 0.2s,
